# slay_the_spire_agent

./: .env.example  .gitignore  ARCHITECTURE.md  DESIGN_LOGGING_LANGFUSE_SQL_MIGRATION.md  IMPROVEMENT_PLAN.md  IMPROVE_PROMPTING.md  PLAN.md  PROMPT_MEMORY_CONTEXT_NOTE.md  README.md  alembic.ini  data-flow-diagram.md  package-lock.json  package.json  pyproject.toml  requirements.txt  run_agent.bat  run_agent.sh  run_api.bat  run_api.sh  ui_improvement.md  user-sequence-diagram.md
apps/web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
archive/: README.md
archive/greenfield_src/: README.md  __init__.py  main.py
archive/greenfield_tests/: test_agent_threading.py  test_combat_fingerprint.py  test_command_queue.py  test_evaluation_cli.py  test_evaluation_replay.py  test_game_adapter.py  test_llm_gateway.py  test_play_resolve.py  test_proposal_logic.py  test_proposer_llm.py  test_resolve_display.py  test_run_identity.py  test_sqlite_persistence.py  test_state_id.py  test_tool_registry.py  test_trace_telemetry.py
data/: Slay the Spire Strategy Guide.md
data/expert_guides/: SOURCES.md  expert_act1_checks.md  expert_act2_elites_and_bosses.md  (+2 more)
docs/: v2-skeleton.md
notebooks/: run_metrics_exploration.ipynb
scripts/: backfill_logs.py  check_database_config.py  check_langfuse_config.py  check_llm_config.py  extract_reference_data.py  logger.py  parity_check.py  test_llm.py
src/: README.md  check_llm.py  main.py  repo_paths.py  test.py
tests/: conftest.py  test_agent_core.py  test_consolidator.py  test_control_api.py  test_dashboard_run_paths.py  test_decision_graph.py  test_game_session.py  test_graph_flow.py  test_langfuse_recorder.py  test_legal_command.py  test_llm_cached_tokens_extract.py  test_map_analysis.py  test_memory.py  test_memory_store.py  test_openai_tool_loop.py  test_phase0_observability.py  test_phase1_backfill_parity.py  test_planning.py  test_potion_sacred_bark.py  test_projection.py  test_prompt_builder_card_reward.py  test_proposer_llm.py  test_reasoning_budget.py  test_reflection_memory_storage.py  test_replay_compare.py  test_run_analyzer.py  test_shortcuts.py  test_sqlite_persistence.py  test_strategist.py  test_tool_registry.py  test_trace_telemetry.py  test_tracing_legacy_logs.py  test_tracing_persisted_log.py
(+305 files in other folders)
