[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slay-the-spire-agent"
version = "0.1.0"
description = "Slay the Spire LLM agent (legacy stack in src/; greenfield archived under archive/greenfield_src)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "python-dotenv",
    "openpyxl",
    "requests",
    "urllib3",
    "fastapi",
    "websockets",
    "uvicorn[standard]",
    "openai",
    "httpx",
    "langgraph",
    "pydantic>=2",
    "tiktoken>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src"]
