[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slay-the-spire-agent"
version = "0.1.0"
description = "Slay the Spire LLM agent — CommunicationMod bridge, FastAPI dashboard, and React operator UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "python-dotenv",
    "openpyxl",
    "requests",
    "urllib3",
    "fastapi",
    "websockets",
    "uvicorn[standard]",
    "openai",
    "httpx",
    "langgraph",
    "pydantic>=2",
    "tiktoken>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src"]
